--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,27 +10,42 @@
     <TextView
         android:id="@+id/tv_title"
         style="@style/TextAppearance.MaterialComponents.Headline4"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_default"
+        android:layout_marginStart="@dimen/margin_default"
+        android:layout_marginTop="@dimen/margin_default"
         android:text="@string/title_txt"
         android:textAlignment="textStart"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/til_user_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_github_pet"
+        app:layout_constraintBottom_toBottomOf="@id/tv_title"
+        app:layout_constraintBottom_toTopOf="@id/til_user_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_title"
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_user_name"
         style="?attr/textInputFilledStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_default"
         android:layout_marginTop="@dimen/margin_default"
         android:hint="@string/hint_txt"
         android:textColorHint="@color/black"
         app:hintAnimationEnabled="true"
         app:hintTextColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@id/tv_title"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:startIconDrawable="@drawable/ic_search">
 
@@ -38,7 +53,7 @@
             android:id="@+id/tiet_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#E0E0E0"/>
+            android:background="#E0E0E0" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,28 +61,27 @@
         android:id="@+id/btn_confirm_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size"
-        android:textAllCaps="true"
-        android:textStyle="bold"
         android:layout_marginTop="@dimen/margin_small"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintEnd_toEndOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/til_user_name"
         android:backgroundTint="#8FBC8B"
         android:elevation="@dimen/margin_default"
         android:text="@string/confirm_btn_text"
+        android:textAllCaps="true"
         android:textColor="@color/black"
-        app:cornerRadius="4dp"/>
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
+        app:cornerRadius="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_user_name" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_repositories"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/repository_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintEnd_toEndOf="@id/tv_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_confirm_name"
-        />
+        tools:listitem="@layout/repository_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
