fix btn try again

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/error_scenery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:lottie_rawRes="@raw/error"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,22 +21,21 @@
         app:lottie_loop="true" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_repository"
-        style="@style/Widget.Material3.Button.IconButton.Outlined"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_try_again"
+        style="@style/Widget.Material3.Button.OutlinedButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_default"
         android:layout_marginBottom="@dimen/margin_default"
         android:textColor="@color/black"
         app:cornerRadius="@dimen/corner_radius_default"
-        android:text="Tentar novamente"
-        app:icon="@drawable/ic_share"
-        app:iconGravity="end"
-        app:iconTint="@color/black"
+        android:text="@string/try_again_btn_txt"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/error_scenery"
+        />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/av_loading"
