--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:lottie_rawRes="@raw/error"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
-        app:lottie_loop="true" />
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/error" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_try_again"
@@ -28,14 +28,13 @@
         android:layout_marginHorizontal="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_default"
         android:layout_marginBottom="@dimen/margin_default"
-        android:textColor="@color/black"
-        app:cornerRadius="@dimen/corner_radius_default"
         android:text="@string/try_again_btn_txt"
+        android:textColor="@color/black"
         android:visibility="gone"
+        app:cornerRadius="@dimen/corner_radius_default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/error_scenery"
-        />
+        app:layout_constraintTop_toBottomOf="@id/error_scenery" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/av_loading"
@@ -72,8 +71,7 @@
         app:layout_constraintBottom_toTopOf="@id/til_user_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_user_name"
